crates/mun_codegen/src/snapshots/mun_codegen__test__issue_133.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    fn do_the_things(n: i32) -> i32 {\n        n + 7\n    }\n    \n    pub fn main() {\n        do_the_things(3);\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define i32 @do_the_things(i32 %0) {
body:
  %n = alloca i32, align 4
  store i32 %0, ptr %n, align 4
  %n1 = load i32, ptr %n, align 4
  %add = add i32 %n1, 7
  ret i32 %add
}

define void @main() {
body:
  %do_the_things = call i32 @do_the_things(i32 3)
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"
