crates/mun_codegen/src/snapshots/mun_codegen__test__issue_225.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    struct Num {\n        value: i64,\n    }\n\n    pub fn foo(b: i64) {\n        Num { value: b }.value;\n    }\n\n    pub fn bar(b: i64) {\n        { let a = Num { value: b }; a}.value;\n    }\n        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr }
%Num = type { i64 }

@allocatorHandle = external global ptr
@dispatchTable = external global %DispatchTable
@global_type_lookup_table = external global [2 x ptr]

define void @foo(i64 %0) {
body:
  %b = alloca i64, align 8
  store i64 %0, ptr %b, align 4
  %b1 = load i64, ptr %b, align 4
  %init = insertvalue %Num undef, i64 %b1, 0
  %new_ptr = load ptr, ptr @dispatchTable, align 8
  %Num_ptr = load ptr, ptr @global_type_lookup_table, align 8
  %allocator_handle = load ptr, ptr @allocatorHandle, align 8
  %ref = call ptr %new_ptr(ptr %Num_ptr, ptr %allocator_handle)
  %"ref->data" = load ptr, ptr %ref, align 8
  store %Num %init, ptr %"ref->data", align 4
  %"ref->data2" = load ptr, ptr %ref, align 8
  %deref = load %Num, ptr %"ref->data2", align 4
  %Num.value = extractvalue %Num %deref, 0
  ret void
}

define void @bar(i64 %0) {
body:
  %a = alloca ptr, align 8
  %b = alloca i64, align 8
  store i64 %0, ptr %b, align 4
  %b1 = load i64, ptr %b, align 4
  %init = insertvalue %Num undef, i64 %b1, 0
  %new_ptr = load ptr, ptr @dispatchTable, align 8
  %Num_ptr = load ptr, ptr @global_type_lookup_table, align 8
  %allocator_handle = load ptr, ptr @allocatorHandle, align 8
  %ref = call ptr %new_ptr(ptr %Num_ptr, ptr %allocator_handle)
  %"ref->data" = load ptr, ptr %ref, align 8
  store %Num %init, ptr %"ref->data", align 4
  store ptr %ref, ptr %a, align 8
  %a2 = load ptr, ptr %a, align 8
  %"a2->data" = load ptr, ptr %a2, align 8
  %deref = load %Num, ptr %"a2->data", align 4
  %Num.value = extractvalue %Num %deref, 0
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [2 x ptr] zeroinitializer
@allocatorHandle = unnamed_addr global ptr null
