crates/mun_codegen/src/snapshots/mun_codegen__test__issue_228_never_if.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub  fn fact(n: usize) -> usize {\n   \t    if n == 0 {return 1} else {return n * (n-1)}\n   \t    return 2;\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @fact(i64 %0) {
body:
  %n = alloca i64, align 8
  store i64 %0, ptr %n, align 4
  %n1 = load i64, ptr %n, align 4
  %eq = icmp eq i64 %n1, 0
  br i1 %eq, label %then, label %else

then:                                             ; preds = %body
  ret i64 1

else:                                             ; preds = %body
  %n2 = load i64, ptr %n, align 4
  %n3 = load i64, ptr %n, align 4
  %sub = sub i64 %n3, 1
  %mul = mul i64 %n2, %sub
  ret i64 %mul
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
