crates/mun_codegen/src/snapshots/mun_codegen__test__logic_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn and(a: bool, b: bool) -> bool {\n        a && b\n    }\n    pub fn or(a: bool, b: bool) -> bool {\n        a || b\n    }    \n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i1 @and(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %and = and i1 %a1, %b2
  ret i1 %and
}

define i1 @or(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %or = or i1 %a1, %b2
  ret i1 %or
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
